examples/test/testpolicy11148.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11148
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key41: value36
      key40: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value13
          key38: value9
      podSelector:
        matchLabels:
          key12: value0
